--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,46 @@
 <!DOCTYPE html>
 <html lang="ru">
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Page title</title>
+      <link rel="stylesheet" href="./sass/index.scss" />
+      <!-- Add the slick-theme.css if you want default styling -->
+      <link
+         rel="stylesheet"
+         type="text/css"
+         href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+      />
+      <!-- Add the slick-theme.css if you want default styling -->
+      <link
+         rel="stylesheet"
+         type="text/css"
+         href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
+      />
+      <script type="module" src="./index.js"></script>
+   </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Page title</title>
-  <link rel="stylesheet" href="./sass/index.scss" />
-  <script type="module" src="./index.js"></script>
-</head>
-
-<body>
-  <include src="./partials/header-hero.html"></include>
-  <include src="./partials/products.html"></include>
-  <include src="./partials/about.html"></include>
-  <include src="./partials/advantages.html"></include>
-  <include src="./partials/gallery.html"></include>
-  <include src="./partials/customer-reviews.html"></include>
-  <include src="./partials/contacts.html"></include>
-  <include src="./partials/footer.html"></include>
-</body>
-
+   <body>
+      <include src="./partials/header-hero.html"></include>
+      <include src="./partials/products.html"></include>
+      <include src="./partials/about.html"></include>
+      <include src="./partials/advantages.html"></include>
+      <include src="./partials/gallery.html"></include>
+      <include src="./partials/customer-reviews.html"></include>
+      <include src="./partials/contacts.html"></include>
+      <include src="./partials/footer.html"></include>
+      <script
+         type="text/javascript"
+         src="//code.jquery.com/jquery-1.11.0.min.js"
+      ></script>
+      <script
+         type="text/javascript"
+         src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+      ></script>
+      <script
+         type="text/javascript"
+         src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+      ></script>
+      <script src="./js/customer-slider.js"></script>
+   </body>
 </html>
