--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Page title</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Montserrat:wght@400;500;600;700;800;900&family=Roboto:wght@700&family=Seymour+One&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./sass/index.scss" />
   <script type="module" src="./index.js"></script>
 </head>
@@ -19,6 +22,11 @@
     <include src="./partials/customer-reviews.html"></include>
     <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/about-modal.html"></include>
+    <include src="./partials/hero-modal.html"></include>
+    <include src="./partials/franches-modal.html"></include>
+    <include src="./partials/location-modal.html"></include>
+    <include src="./partials/products-modal.html"></include>
   </div>
 </body>
 
