Styles for Ab-1 (and many other ---)

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-  <div class="backdrop">
+  <div>
+    <!-- class="backdrop" -->
     <include src="./partials/header-hero.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/about.html"></include>
