--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,11 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Montserrat:wght@400;500;600;700;800;900&family=Roboto:wght@700&family=Seymour+One&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./sass/index.scss" />
+  <link
+    rel="stylesheet"
+    type="text/css"
+    href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+  />
   <script type="module" src="./index.js"></script>
 </head>
 
@@ -29,6 +34,18 @@
     <include src="./partials/location-modal.html"></include>
     <include src="./partials/products-modal.html"></include>
   </div>
-</body>
 
+  <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-1.11.0.min.js"
+  ></script>
+  <script
+    type="text/javascript"
+    src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+  ></script>
+  <script
+    type="text/javascript"
+    src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+  ></script>
+</body>
 </html>
