--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Montserrat:wght@400;500;600;700;800;900&family=Roboto:wght@700&family=Seymour+One&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./sass/index.scss" />
-  <link
-    rel="stylesheet"
-    type="text/css"
-    href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
-  />
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <script type="module" src="./index.js"></script>
   <script type="module" src="./menu-hero.js"></script>
 </head>
@@ -28,25 +24,17 @@
   <include src="./partials/customer-reviews.html"></include>
   <include src="./partials/contacts.html"></include>
   <include src="./partials/footer.html"></include>
-  <div class="backdrop visually-hidden" data-backdrop>
-    <include src="./partials/about-modal.html"></include>
-    <include src="./partials/hero-modal.html"></include>
-    <include src="./partials/franches-modal.html"></include>
-    <include src="./partials/location-modal.html"></include>
-    <include src="./partials/products-modal.html"></include>
-  </div>
+  <!-- <div class="backdrop visually-hidden" data-backdrop> -->
+  <include src="./partials/about-modal.html"></include>
+  <include src="./partials/hero-modal.html"></include>
+  <include src="./partials/franches-modal.html"></include>
+  <include src="./partials/location-modal.html"></include>
+  <include src="./partials/products-modal.html"></include>
+  <!-- </div> -->
 
-  <script
-      type="text/javascript"
-      src="//code.jquery.com/jquery-1.11.0.min.js"
-  ></script>
-  <script
-    type="text/javascript"
-    src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
-  ></script>
-  <script
-    type="text/javascript"
-    src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
-  ></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </body>
+
 </html>
