--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,13 @@
   <include src="./partials/customer-reviews.html"></include>
   <include src="./partials/contacts.html"></include>
   <include src="./partials/footer.html"></include>
-  <!-- <div class="backdrop visually-hidden" data-backdrop> -->
-  <include src="./partials/about-modal.html"></include>
-  <include src="./partials/hero-modal.html"></include>
-  <include src="./partials/franches-modal.html"></include>
-  <include src="./partials/location-modal.html"></include>
-  <include src="./partials/products-modal.html"></include>
-  <!-- </div> -->
+  <div class="backdrop visually-hidden" data-backdrop>
+    <include src="./partials/about-modal.html"></include>
+    <include src="./partials/hero-modal.html"></include>
+    <include src="./partials/franches-modal.html"></include>
+    <include src="./partials/location-modal.html"></include>
+    <include src="./partials/products-modal.html"></include>
+  </div>
 
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
